--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.10",
     "@types/react-native": "^0.57.42",
+    "@types/react-native-vector-icons": "^4.6.4",
     "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "^24.5.0",
     "eslint": "^5.15.3",
