--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-paper": "^2.15.0",
+    "react-native-tensorflow": "^0.1.8",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.5.1"
   },
