--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,7 @@ target 'kakatonrn' do
 
   # Pods for onova
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+  pod 'TensorFlowLite', '1.12.0'
 end
 
 
