--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-paper": "^2.15.0",
     "react-native-tensorflow": "^0.1.8",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.5.1"
+    "react-navigation": "^3.5.1",
+    "tflite-react-native": "^0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
